examples/smlfmt-1.2.0/test/fail/mixfix-1/use.sml
val x = 0 < 1 -- 2 > 3
